--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Camel Framework
 Theme URI: https://github.com/CamelThemes/camel-framework
 Author: The CamelThemes Team
 Author URI: https://camelthemes.com
-Description: The CamelTheme Coar Framework
+Description: The CamelThemes Core Framework
 Version: 1.0
 License: MIT
 License URI: https://opensource.org/licenses/MIT
