--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ Text Domain: camel
 Tags: framework
 */
 
+/** Screen reader text */
+.screen-reader-text {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+}
+
 /**
  * Post content
  */
