--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ Text Domain: camel-framework
 Tags: one-column, two-columns, right-sidebar, flexible-header, accessibility-ready, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
 */
 
+/**
+ * Header
+ */
+.header {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 /**
  * Post content
