--- a/style.css
+++ b/style.css
@@ -40,7 +40,23 @@ embed, iframe, object {
 .wp-caption-text {}
 .screen-reader-text {}
 .bypostauthor {}
-.alignright {}
-.alignleft {}
-.aligncenter {}
+.alignleft {
+    display: inline;
+    float: left;
+    margin-right: 1.5em;
+}
+
+.alignright {
+    display: inline;
+    float: right;
+    margin-left: 1.5em;
+}
+
+.aligncenter {
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .gallery-caption {}
+
