--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ Text Domain: camel-framework
 Tags: one-column, two-columns, right-sidebar, flexible-header, accessibility-ready, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
 */
 
+a {
+    -ms-word-wrap: break-word;
+    word-wrap: break-word;
+}
+
 /**
  * Header
  */
