--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1,59 +1,70 @@
-.woocommerce-product-gallery__trigger {
+.woocommerce-active .woocommerce-product-gallery__trigger {
     position: absolute;
     top: 0.5em;
     right: 1.5em;
     z-index: 99;
 }
-.onsale {z-index: 99;}
-ol.flex-control-thumbs {
+
+.woocommerce-active .onsale { z-index: 99; }
+
+.woocommerce-active ol.flex-control-thumbs {
     display: flex;
     list-style: none;
     padding: 0;
     margin-top: 8px;
 }
-ol.flex-control-thumbs li{
+
+.woocommerce-active ol.flex-control-thumbs li{
     margin-right: 8px;
 }
-.form-row {
+
+.woocommerce-active .form-row {
     margin: 0;
 }
-.added_to_cart {
+
+.woocommerce-active .added_to_cart {
     margin-left: 8px;
 }
 
-.payment_box p {
+.woocommerce-active .payment_box p {
     margin-bottom: 0;
 }
-.shop_attributes p {
+
+.woocommerce-active .shop_attributes p {
     margin: 0;
     padding: .5em;
 }
-/* widget filter by price */
-.price_slider_wrapper .ui-widget-content {
+
+.woocommerce-active .price_slider_wrapper .ui-widget-content {
     border-radius: 1em;
     background-color: #C0C0C0;
     border: 0;
 }
-.widget_price_filter .ui-slider {
+
+.woocommerce-active .widget_price_filter .ui-slider {
     height: .4em;
     position: relative;
     text-align: left;
     margin-left: .5em;
     margin-right: .5em;
 }
-.widget_price_filter .price_slider {
+
+.woocommerce-active .widget_price_filter .price_slider {
     margin-bottom: 1em;
 }
-.widget_price_filter .ui-slider-horizontal .ui-slider-range {
+
+.woocommerce-active .widget_price_filter .ui-slider-horizontal .ui-slider-range {
     top: 0;
     height: 100%;
 }
-.widget_price_filter .ui-slider .ui-slider-range {
+
+.woocommerce-active .widget_price_filter .ui-slider .ui-slider-range {
     position: absolute;
     z-index: 1;
     background-color: #4C0AFF;
 }
-.widget_price_filter .ui-slider .ui-slider-handle {
+
+.woocommerce-active .widget_price_filter .ui-slider .ui-slider-handle {
     position: absolute;
     z-index: 2;
     width: 1em;
@@ -65,14 +76,17 @@ ol.flex-control-thumbs li{
     top: -.3em;
     margin-left: -.5em;
 }
-.price_slider_amount {display: flex;}
-.price_slider_amount .button {
+
+.woocommerce-active .price_slider_amount {display: flex;}
+
+.woocommerce-active .price_slider_amount .button {
     color: #fff;
     background-color: #007bff;
     border-color: #007bff;
     border-radius: .25rem;
 }
-.price_label {
+
+.woocommerce-active .price_label {
     margin-left: 1em;
     line-height: 1.8em;
 }
