--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1,96 +1,1 @@
-.woocommerce-active .woocommerce-product-gallery__trigger {
-    position: absolute;
-    top: 0.5em;
-    right: 1.5em;
-    z-index: 99;
-}
-
-.woocommerce-active .onsale { z-index: 99; }
-
-.woocommerce-active ol.flex-control-thumbs {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin-top: 8px;
-}
-
-.woocommerce-active ol.flex-control-thumbs li{
-    margin-right: 8px;
-}
-
-.woocommerce-active .form-row {
-    margin: 0;
-}
-
-.woocommerce-active .added_to_cart {
-    margin-left: 8px;
-}
-
-.woocommerce-active .payment_box p {
-    margin-bottom: 0;
-}
-
-.woocommerce-active .shop_attributes p {
-    margin: 0;
-    padding: .5em;
-}
-
-.woocommerce-active .price_slider_wrapper .ui-widget-content {
-    border-radius: 1em;
-    background-color: #C0C0C0;
-    border: 0;
-}
-
-.woocommerce-active .widget_price_filter .ui-slider {
-    height: .4em;
-    position: relative;
-    text-align: left;
-    margin-left: .5em;
-    margin-right: .5em;
-}
-
-.woocommerce-active .widget_price_filter .price_slider {
-    margin-bottom: 1em;
-}
-
-.woocommerce-active .widget_price_filter .ui-slider-horizontal .ui-slider-range {
-    top: 0;
-    height: 100%;
-}
-
-.woocommerce-active .widget_price_filter .ui-slider .ui-slider-range {
-    position: absolute;
-    z-index: 1;
-    background-color: #4C0AFF;
-}
-
-.woocommerce-active .widget_price_filter .ui-slider .ui-slider-handle {
-    position: absolute;
-    z-index: 2;
-    width: 1em;
-    height: 1em;
-    background-color: #4C0AFF;
-    border-radius: 1em;
-    cursor: ew-resize;
-    outline: 0;
-    top: -.3em;
-    margin-left: -.5em;
-}
-
-.woocommerce-active .price_slider_amount {display: flex;}
-
-.woocommerce-active .price_slider_amount .button {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-    border-radius: .25rem;
-}
-
-.woocommerce-active .price_label {
-    margin-left: 1em;
-    line-height: 1.8em;
-}
-
-.woocommerce-active .variation p {
-    margin: 0;
-}
+.woocommerce-active .woocommerce-product-gallery__trigger{position:absolute;top:.5em;right:1.5em;z-index:99}.woocommerce-active .onsale{z-index:99}.woocommerce-active ol.flex-control-thumbs{display:-webkit-box;display:-ms-flexbox;display:flex;list-style:none;padding:0;margin-top:8px}.woocommerce-active ol.flex-control-thumbs li{margin-right:8px}.woocommerce-active .form-row{margin:0}.woocommerce-active .added_to_cart{margin-left:8px}.woocommerce-active .payment_box p{margin-bottom:0}.woocommerce-active .shop_attributes p{margin:0;padding:.5em}.woocommerce-active .price_slider_wrapper .ui-widget-content{border-radius:1em;background-color:silver;border:0}.woocommerce-active .widget_price_filter .ui-slider{height:.4em;position:relative;text-align:left;margin-left:.5em;margin-right:.5em}.woocommerce-active .widget_price_filter .price_slider{margin-bottom:1em}.woocommerce-active .widget_price_filter .ui-slider-horizontal .ui-slider-range{top:0;height:100%}.woocommerce-active .widget_price_filter .ui-slider .ui-slider-range{position:absolute;z-index:1;background-color:#4c0aff}.woocommerce-active .widget_price_filter .ui-slider .ui-slider-handle{position:absolute;z-index:2;width:1em;height:1em;background-color:#4c0aff;border-radius:1em;cursor:ew-resize;outline:0;top:-.3em;margin-left:-.5em}.woocommerce-active .price_slider_amount{display:-webkit-box;display:-ms-flexbox;display:flex}.woocommerce-active .price_slider_amount .button{color:#fff;background-color:#007bff;border-color:#007bff;border-radius:.25rem}.woocommerce-active .price_label{margin-left:1em;line-height:1.8em}.woocommerce-active .variation p{margin:0}
