Refactored resource files

--- a/resources/sass/woocommerce.scss
+++ b/resources/sass/woocommerce.scss
@@ -1,3 +1,4 @@
+// Required styles for WooCommerce Plugin
 .woocommerce-active {
     .woocommerce-product-gallery__trigger {
         position: absolute;
