--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ embed, iframe, object {
     margin-bottom: 0;
 }
 
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 576px) {
     .gallery-item {
         max-width: 25%;
     }
@@ -112,7 +112,7 @@ embed, iframe, object {
         max-width: 25%;
     }
 }
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 768px) {
     .gallery-columns-5 .gallery-item {
         max-width: 20%;
     }
