Added bootstrap button style to price filter button.

--- a/resources/sass/woocommerce.scss
+++ b/resources/sass/woocommerce.scss
@@ -117,7 +117,16 @@
             color: #fff;
             background-color: #007bff;
             border-color: #007bff;
+            cursor: pointer;
+            padding: .375rem .75rem;
             border-radius: .25rem;
+            border: 0;
+            transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+                &:hover {
+                    color: #fff;
+                    background-color: #0069d9;
+                    border-color: #0062cc;
+                }
         }
     }
     .price_label {
