--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ embed, iframe, object {
     -ms-word-wrap: break-word;
     word-wrap: break-word;
 }
-.wp-caption {}
+.wp-caption { max-width: 100%; }
 .wp-caption-text {}
 .screen-reader-text {}
 .bypostauthor {}
